# cdb-mcp

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  cdb_mcp.py  pyproject.toml  pytest.ini
.github/skills/cdb-debugging/: SKILL.md
samples/easy/: buggy.cpp
samples/hard/: challenge.cpp
samples/very-hard/: pipeline.cpp
tests/: __init__.py  conftest.py  test_execution.py  test_inspection.py  test_navigation_and_advanced.py  test_session.py  test_tool_registration.py
tools/: __init__.py  advanced.py  execution.py  inspection.py  navigation.py  session.py  symbols.py
