[project]
name = "cdb-mcp"
version = "0.1.0"
description = "MCP server for CDB (WinDBG)"
authors = [{name = "Christoph Diehl", email = "1614333+posidron@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cdb-mcp = "cdb_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
